# mood2023

./: .gitignore  Dockerfile  pyproject.toml  readme.md  run_example.py
data/abdom/: abdom_train  toy  toy_label
data/brain/: brain_train  toy  toy_label
scripts/: attend.py  mood_dataloader.py  mood_docker.py  mood_train.py  pos3d.py  pred_simple.py  run_pixel_abdom.sh  run_pixel_brain.sh  run_sample_abdom.sh  run_sample_brain.sh  stats.yaml  train_mood.sh  utils.py  vit_components.py  vit_vae.py
scripts/wandb/MOOD/wandb/: latest-run
scripts/wandb/MOOD/wandb/offline-run-20230910_211739-tz7x0u1k/: run-tz7x0u1k.wandb
scripts/wandb/MOOD/wandb/offline-run-20230910_211739-tz7x0u1k/files/: wandb-metadata.json
scripts/wandb/MOOD/wandb/offline-run-20230910_211808-car12vz3/: run-car12vz3.wandb
scripts/wandb/MOOD/wandb/offline-run-20230910_211808-car12vz3/files/: requirements.txt  wandb-metadata.json
scripts/wandb/MOOD/wandb/offline-run-20230910_211830-2hzhqurf/: run-2hzhqurf.wandb
scripts/wandb/MOOD/wandb/offline-run-20230910_211830-2hzhqurf/files/: wandb-metadata.json
